# gnumake-wheel

./: .gitignore  Makefile  README.md  configure  pyproject.toml
.github/workflows/: main.yml
